<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.qbill.ui.activity.login.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.activity.login.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAppLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/gray_border_radius"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivAppLogo">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/your_email"
                    android:imeActionLabel="next"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:text="@={viewModel.email}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="@+id/tvEmail"
                    app:layout_constraintStart_toStartOf="@+id/tvEmail"
                    app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/gray_border_radius"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@+id/consEmail"
                app:layout_constraintStart_toStartOf="@+id/consEmail"
                app:layout_constraintTop_toBottomOf="@+id/consEmail">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/your_password"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_30sdp"
                    android:imeActionLabel="done"
                    android:text="@={viewModel.password}"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="@+id/tvPassword"
                    app:layout_constraintStart_toStartOf="@+id/tvPassword"
                    app:layout_constraintTop_toBottomOf="@+id/tvPassword" />
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivEye"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_eye_close"
                    app:tint="@color/red"
                    app:layout_constraintBottom_toBottomOf="@id/etPassword"
                    app:layout_constraintEnd_toEndOf="@+id/etPassword"
                    app:layout_constraintTop_toTopOf="@id/etPassword" />
            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/forget_password"
                android:textColor="@color/red"
                app:layout_constraintEnd_toEndOf="@+id/consPassword"
                app:layout_constraintTop_toBottomOf="@+id/consPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_red_rounded"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/log_in"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/consPassword"
                app:layout_constraintStart_toStartOf="@+id/consPassword"
                app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/powered_by_infosoft"
                android:textColor="@color/red"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                app:layout_constraintWidth_percent="0.95"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>